--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^20.2.3",
+    "@types/uuid": "^9.0.2",
+    "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "eslint": "^8.41.0",
@@ -19,7 +22,21 @@
   },
   "dependencies": {
     "@types/dotenv": "^8.2.0",
+    "detect-port": "^1.5.1",
     "dotenv": "^16.0.3",
-    "telegraf": "^4.12.2"
+    "emoji": "^0.3.2",
+    "esm": "^3.2.25",
+    "express": "^4.18.2",
+    "http4js": "^5.0.7",
+    "pg": "^8.11.0",
+    "prisma": "^4.14.1",
+    "tcp-port-used": "^1.0.2",
+    "telegraf": "^4.12.2",
+    "telegraf-session-local": "^2.1.1",
+    "ts-serializable": "^3.0.32",
+    "typeorm": "^0.3.16",
+    "uuid": "^9.0.0",
+    "winston": "^3.9.0",
+    "ws": "^8.13.0"
   }
 }
